<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_padding_bottom"
    android:paddingLeft="@dimen/activity_padding_horizontal"
    android:paddingRight="@dimen/activity_padding_horizontal"
    android:paddingTop="@dimen/activity_padding_top"
    tools:context="com.example.wendywu.startchatdemo.MainActivity">

    <TextView
        android:id="@+id/subject_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/subject_hint_text_margin_horizontal"
        android:layout_marginStart="@dimen/subject_hint_text_margin_horizontal"
        android:layout_marginTop="@dimen/subject_hint_text_margin_top"
        android:text="@string/text_subject_hint"
        android:textColor="@color/colorTextViewTitle"
        app:layout_constraintTop_toBottomOf="@+id/subject_layout" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/subject_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/layout_margin_horizontal"
        android:layout_marginStart="@dimen/layout_margin_horizontal"
        android:layout_marginTop="@dimen/subject_layout_margin_top"
        android:background="@drawable/text_input_background"
        android:minHeight="@dimen/subject_layout_min_height"
        android:paddingBottom="@dimen/input_layout_padding_vertical"
        android:paddingEnd="@dimen/input_layout_padding_end"
        android:paddingStart="@dimen/input_layout_padding_start"
        android:paddingTop="@dimen/input_layout_padding_vertical"
        app:layout_constraintEnd_toEndOf="@id/receiver_layout"
        app:layout_constraintStart_toStartOf="@id/receiver_layout"
        app:layout_constraintTop_toBottomOf="@+id/receiver_layout">

        <EditText
            android:id="@+id/subject_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/subject_edit_text_margin_end"
            android:background="@android:color/transparent"
            android:inputType="textMultiLine|textCapSentences|textNoSuggestions"
            android:maxLines="3"
            android:minLines="1"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@drawable/input_cursor"
            android:textSize="@dimen/text_size_middle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/subject_count_text"
            app:layout_constraintStart_toEndOf="@id/subject_title_text"
            app:layout_constraintTop_toBottomOf="@+id/subject_title_hint_text" />

        <TextView
            android:id="@+id/subject_title_hint_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_subject_title"
            android:textColor="@color/colorTextViewTitle"
            android:textSize="@dimen/text_size_smallest"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subject_title_text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/title_text_margin_end"
            android:gravity="center_vertical"
            android:text="@string/text_subject_title"
            android:textColor="@color/colorTextViewTitle"
            android:textSize="@dimen/text_size_middle_plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/subject_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subject_count_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="end|bottom"
            android:text="@string/text_subject_count"
            android:textColor="@color/colorTextViewTitle"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/receiver_email_error_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/colorTextCountWarning"
        android:visibility="gone"
        android:text="@string/text_error_mail_format"
        android:layout_marginBottom="@dimen/receiver_email_error_text_margin_bottom"
        app:layout_constraintStart_toStartOf="@+id/receiver_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/receiver_layout"

        />
    <android.support.constraint.ConstraintLayout
        android:id="@+id/receiver_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/layout_margin_horizontal"
        android:layout_marginStart="@dimen/layout_margin_horizontal"
        android:background="@drawable/text_input_background"
        android:maxHeight="@dimen/receiver_layout_max_height"
        android:minHeight="@dimen/receiver_layout_min_height"
        android:paddingTop="@dimen/receiver_layout_padding_top"
        android:paddingEnd="@dimen/input_layout_padding_end"
        android:paddingStart="@dimen/input_layout_padding_start"
        android:paddingBottom="@dimen/receiver_layout_padding_bottom"
        android:layout_marginTop="@dimen/receiver_layout_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/receiver_email_error_text">

        <TextView
            android:id="@+id/receiver_title_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/title_text_margin_end"
            android:gravity="center_vertical"
            android:text="@string/text_receiver_title"
            android:textColor="@color/colorTextViewTitle"
            android:textSize="@dimen/text_size_middle_plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/selected_receiver_scroll_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/receiver_title_hint_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_receiver_title"
            android:textColor="@color/colorTextViewTitle"
            android:textSize="@dimen/text_size_smallest"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/selected_receiver_scroll_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="@dimen/selected_receiver_scroll_layout_max_height"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/receiver_title_hint_text"
            app:layout_constraintEnd_toStartOf="@+id/receiver_auto_complete_text"
            app:layout_constraintStart_toEndOf="@+id/receiver_title_text">

            <ScrollView
                android:id="@+id/selected_receiver_scroll_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/selected_receiver_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:flexDirection="row"
                    app:flexWrap="wrap"
                    app:justifyContent="flex_start" />
            </ScrollView>
        </android.support.constraint.ConstraintLayout>

        <com.example.wendywu.startchatdemo.utils.CustomAutoCompleteTextView
            android:id="@+id/receiver_auto_complete_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:minWidth="@dimen/receiver_auto_complete_text_min_width"
            android:background="@android:color/transparent"
            android:dropDownAnchor="@id/receiver_title_text"
            android:dropDownHeight="wrap_content"
            android:dropDownVerticalOffset="@dimen/receiver_auto_complete_text_dropdown_offset"
            android:dropDownWidth="match_parent"
            android:gravity="center_vertical"
            android:inputType="textEmailAddress|textMultiLine"
            android:popupBackground="@drawable/receiver_auto_complete_dropdown_background"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@drawable/input_cursor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/selected_receiver_scroll_layout"
            app:layout_constraintTop_toBottomOf="@+id/receiver_title_hint_text"
            tools:ignore="LabelFor" />
    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/message_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="@dimen/layout_margin_horizontal"
        android:background="@drawable/message_input_background"
        android:elevation="@dimen/message_layout_elevation"
        android:fitsSystemWindows="true"
        android:padding="@dimen/message_layout_padding"

        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/message_edit_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/message_edit_text_margin_end"
            android:layout_marginStart="@dimen/message_edit_text_margin_start"
            android:layout_marginTop="@dimen/message_edit_text_margin_top"
            android:background="@android:color/transparent"
            android:gravity="start|top"
            android:hint="@string/text_message_hint"
            android:inputType="textMultiLine|textCapSentences|textNoSuggestions"
            android:maxLines="5"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@drawable/input_cursor"
            android:textSize="@dimen/text_size_middle"
            app:layout_constraintBottom_toTopOf="@+id/message_input_bottom_layout"
            app:layout_constraintEnd_toStartOf="@id/message_expand_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/message_expand_icon"
            android:layout_width="@dimen/message_layout_icon_size"
            android:layout_height="@dimen/message_layout_icon_size"
            android:gravity="end|top"
            android:src="@drawable/expand_icon"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/message_input_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/message_send_icon"
                android:layout_width="@dimen/message_layout_icon_size"
                android:layout_height="@dimen/message_layout_icon_size"
                android:contentDescription="@string/text_description_message_empty"
                android:gravity="end|bottom"
                android:src="@drawable/message_send_grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/message_count_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/message_count_text_margin_end"
                android:gravity="center_vertical"
                android:text="@string/text_message_count"
                android:textColor="@color/colorTextCountWarning"
                android:textSize="@dimen/text_size_smallest"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/message_send_icon" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>

